Fix bug #24652 - Sterling, do you begin to think that maybe it wasn't such a good idea?